# volatile_harvesting_engine

./: .env.example  .gitignore  FEATURES.md  PRD.md  README.md  pyproject.toml
configs/: app.yaml  backtest_grid_intraday.yaml  live_free.yaml  live_kite.yaml  live_live.yaml  live_paper.yaml  scanner.yaml  sentiment.yaml  strategies.yaml
deploy/: setup.sh
docs/: HOW_WE_MAKE_MONEY.md  RESEARCH_NOTES.md  VHE_RESEARCH_AND_BUILD_PLAN.md  VHE_STRATEGY_RESEARCH_AND_LIVE_PLATFORM_PLAN.md  ZERODHA_SETUP.md
docs/superpowers/plans/: 2026-07-06-phase1-monte-carlo.md  2026-07-06-phase2-walk-forward.md  2026-07-06-phase3-react-auth.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
python/tests/: conftest.py  test_auth.py  test_backtest_engine.py  test_backtest_runner.py  test_bars.py  test_cli_kite.py  test_config_loader.py  test_config_models.py  test_costs.py  test_data_schema.py  test_dynamic_grid.py  test_dynamic_grid_resting.py  test_env.py  test_execution_engine.py  test_feed_factory.py  test_feed_health.py  test_feed_health_closed.py  test_fill_model.py  test_indicator_service.py  test_indicators.py  test_kite_auth.py  test_kite_binary.py  test_kite_instrument_cache.py  test_kite_instruments.py  test_kite_session.py  test_last30days_bridge.py  test_live_models.py  test_market_session.py  test_momentum.py  test_momentum_sentiment.py  test_monte_carlo.py  test_optimiser.py  test_pair_ledger.py  test_pair_spread.py  test_paper_aggressive.py  test_paper_broker.py  test_paper_resting.py  test_paper_sessions.py  test_paper_stats.py  test_platform_events.py  (+11 more)
python/vhe/: __init__.py  cli.py
python/vhe/data/: nse.py  (+6 more)
rust/: Cargo.toml
rust/crates/vhe-core/: Cargo.toml
rust/crates/vhe-core/src/: lib.rs
rust/crates/vhe-kite/: Cargo.toml
rust/crates/vhe-kite/src/: lib.rs
rust/crates/vhe-live/: Cargo.toml
rust/crates/vhe-live/src/: main.rs
rust/crates/vhe-risk/: Cargo.toml
rust/crates/vhe-risk/src/: lib.rs
(+114 files in other folders)
