[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "volatile-harvesting-engine"
version = "0.1.0"
description = "Volatility Harvesting Engine research and execution stack"
readme = "docs/VHE_RESEARCH_AND_BUILD_PLAN.md"
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.1.3,<2",
  "httpx>=0.28.1,<1",
  "pandas>=2.2.3,<3",
  "pyarrow>=18.1.0,<19",
  "pydantic>=2.10.4,<3",
  "PyYAML>=6.0.2,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4,<9",
]

[project.scripts]
vhe = "vhe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["python/vhe"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]

