[workspace]
members = [
  "crates/vhe-core",
  "crates/vhe-kite",
  "crates/vhe-live",
  "crates/vhe-risk",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = "1.36.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sqlx = { version = "0.8.2", default-features = false, features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-native-roots"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }

